--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/service-worker": "^15.2.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -29,6 +31,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
